# First-ISP-Pipline

./: .gitignore  CMakeLists.txt  Makefile  PROJECT_STRUCTURE.md  README.md  lmmse_demosaic.cpp
bm3d/: CMakeLists.txt  Makefile  main.cpp
bm3d/include/: bm3d_denoiser.hpp
bm3d/src/: bm3d_denoiser.cpp
src/core/: AMaZE.cpp  AMaZE.h  ahd.cpp  ahd.h  amazefromgithub.cpp  amazefromgithub.h  amazevng.cpp  amazevng.h  awb.cpp  awb.h  blc.cpp  blc.h  ccm.cpp  ccm.h  demosiac.cpp  demosiac.h  denoise.cpp  denoise.h  gamma.cpp  gamma.h  lmmse.cpp  lmmse.h  raw_reader.cpp  raw_reader.h  rcd.cpp  rcd.h  sharpen.cpp  sharpen.h  vgn.cpp  vng.cpp  vng.h
src/core/bmp/: converter.cpp  converter.h  dct.cpp  dct.h  dwt.cpp  dwt.h  nlm.cpp  nlm.h
src/tests/: isp_pipline_opencv_method.cpp  test_ahd.cpp  test_amaze.cpp  test_amazefromgithub.cpp  test_amazevng.cpp  test_awb.cpp  test_blc.cpp  test_bm3d.cpp  test_ccm.cpp  test_demosiac.cpp  test_gamma.cpp  test_lmmse.cpp  test_manual_denoise.cpp  test_nlm.cpp  test_no_nlm.cpp  test_raw_reader.cpp  test_rcd.cpp  test_rgb_ycbcr.cpp  test_vng.cpp  test_vng_opencv.cpp  trydemosiac.cpp
